desenv_tests/test-assets/desenv/failure/desenv_wrong_usage_4.rs
use desenv::Desenv;

#[derive(Desenv)]
#[desenv = "hello"]
struct Config {
    field: String
}

fn main(){}